bevy_elf_macros/tests/ui/fail/empty_type_attr.stderr
error: expected attribute arguments in parentheses: #[elf(...)]
 --> tests/ui/fail/empty_type_attr.rs:4:3
  |
4 | #[elf]
  |   ^^^
